resolver not called when parent params change

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   {{title}}
 </h1>
 
-<a routerLink="/lazy">Lazy Module</a>
+<a routerLink="1/lazy/1">1 and 1</a>
+<a routerLink="1/lazy/2">1 and 2</a>
+<a routerLink="2/lazy/2">2 and 2</a>
 
 <router-outlet></router-outlet>
