Add wildcard route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,6 @@
   {{title}}
 </h1>
 
-<a routerLink="1/lazy/1">1 and 1</a>
-<a routerLink="1/lazy/2">1 and 2</a>
-<a routerLink="2/lazy/2">2 and 2</a>
+<a routerLink="foo">Foo</a>
 
 <router-outlet></router-outlet>
